--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
   font-family: 'Pretendard-ExtraBold';
   src: url('./fonts/Pretendard-ExtraBold.woff');
 }
+@font-face {
+  font-family: 'ChangwonDangamAsacBold';
+  src: url('./fonts/ChangwonDangamAsac-Bold_0712.ttf');
+}
 
 body {
   font-family: 'Pretendard-Regular';
